@@ -1,4 +1,9 @@
 * Author: Mike FABIAN <mfabian@redhat.com>
+* 17 Mar 2017 Released 1.5.27 version
+* Update translations from zanata (pl, uk updated)
+* emoji-picker: make skin tone selection work for gendered emoji
+
+* Author: Mike FABIAN <mfabian@redhat.com>
 * 16 Mar 2017 Released 1.5.26 version
 * Update translations from zanata (de updated)
 * Fix display of warning message when a dictionary is not installed.
